--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+<body style="background-color:purple;">
 <body>
 <h1>Purple Possum LLC</h1>
-<p>Parent company of CLS Review App</p>
+<p>Parent company of Clinical Lab Science Review App</p>
 </body>
 </html>
