--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:purple;">
 <body>
-<h1>Purple Possum LLC</h1>
-<p>Parent company of Clinical Lab Science Review App</p>
+<h1 style="background-color:white;font-family:verdana;">Purple Possum LLC</h1>
+<p style="background-color:white;font-family:verdana;">Parent company of Clinical Lab Science Review App</p>
 </body>
 </html>
